[gd_scene load_steps=5 format=2]

[ext_resource path="res://Items/Sword.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/Projectiles/Player Dagger.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Player Dagger" instance=ExtResource( 2 )]
collision_layer = 64
collision_mask = 9
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 3.86493, 2.08111 )
scale = Vector2( 0.6, 0.3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]
rotation = 0.785398
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( 1.33786, 1.63516 )

[connection signal="area_entered" from="." to="." method="_on_Player_Dagger_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_Dagger_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
